<resources>
    <string name="app_name">My Prescriptor</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="create">Create</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="or">OR</string>
    <string name="title_activity_test">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_all_your_prescriptions_nin_1_simple_place">Manage All Your\nPrescriptions In 1 Simple Place</string>
    <string name="manage">Manage</string>
    <string name="by_setting_an_alarm_you_will_nnever_miss_a_prescription_anymore">By setting an Alarm you will\nNever Miss a Prescription anymore</string>
    <string name="keep_your_family_safe_by_ntracking_their_prescriptions">Keep Your Family Safe by\nTracking Their Prescriptions</string>
    <string name="get_started">Get Started</string>


    <string name="title_activity_login">Log in</string>


    <string name="pick_country">Select Your Country</string>
    <string name="facebook_app_id">138179210305784</string>
    <string name="fb_login_protocol_scheme">fb138179210305784</string>


</resources>
