<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_loginscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kaaddevelopers.myprescriptor.login.view.LoginActivity"
    tools:layout_editor_absoluteY="25dp">


    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="112dp"
        android:layout_height="64dp"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="27dp"
        app:layout_constraintBottom_toTopOf="@+id/text_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_icon" />

    <TextView
        android:id="@+id/text_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/capture_it_2"
        android:text="@string/or"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/layout_fblogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_createaccount" />

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="15dp"
        android:layout_marginStart="22dp"
        android:text="Log In"
        android:textColor="#0285ff"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/layout_email"
        app:layout_constraintStart_toStartOf="@+id/image_logo"
        app:layout_constraintTop_toBottomOf="@+id/image_logo" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:text="@string/log_in"
        app:layout_constraintBottom_toTopOf="@+id/layout_createaccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_password" />

    <LinearLayout
        android:id="@+id/layout_email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/layout_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login">

        <ImageView
            android:id="@+id/image_email"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/email_icon" />

        <EditText
            android:id="@+id/loginActivityEmailEditText"
            android:layout_width="234dp"
            android:layout_height="wrap_content"

            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"

            android:layout_marginLeft="5dp"
            android:layout_marginRight="8dp"


            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"

            tools:layout_editor_absoluteX="63dp"
            tools:layout_editor_absoluteY="161dp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_email">

        <ImageView
            android:id="@+id/image_password"
            android:layout_width="30dp"
            android:layout_height="20dp"

            android:layout_marginTop="13dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/password_icon" />

        <EditText
            android:id="@+id/loginActivityPasswordEditText"
            android:layout_width="234dp"
            android:layout_height="wrap_content"


            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"

            android:layout_marginLeft="5dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"

            tools:layout_editor_absoluteX="125dp"
            tools:layout_editor_absoluteY="0dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_createaccount"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="65dp"
        android:layout_marginStart="65dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/text_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login">

        <TextView
            android:id="@+id/text_create"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/don_t_have_an_account"
            tools:layout_editor_absoluteX="72dp"
            tools:layout_editor_absoluteY="373dp" />

        <Button
            android:id="@+id/loginActivityLoginButton"
            android:layout_width="77dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/create"
            tools:layout_editor_absoluteX="224dp"
            tools:layout_editor_absoluteY="373dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_fblogin"

        android:layout_width="201dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:background="#3a589b"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/layout_googlelogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_or">

        <ImageView
            android:id="@+id/image_fblogo"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/facebook_logo_square" />

        <TextView
            android:id="@+id/text_fblogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/image_fblogo"
            android:layout_toRightOf="@+id/image_fblogo"
            android:text="@string/log_in_with_facebook"
            android:textColor="#FFFFFF" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_googlelogin"

        android:layout_width="201dp"
        android:layout_height="50dp"

        android:layout_marginBottom="26dp"
        android:background="#FFFFFF"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_fblogin">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            app:srcCompat="@drawable/google_logo_square" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/imageView3"
            android:layout_toRightOf="@+id/imageView3"
            android:text="@string/log_in_with_google" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
